...
        android:enabled="true"
        android:icon="@drawable/ic_navigation_search"
        android:title="@string/navigation_title_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_analyse_nutrition"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_analyse"
        android:title="@string/navigation_title_analyse"
        app:showAsAction="ifRoom" />

    <item
...
