<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_ingredient_input_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ingredient_analysis">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</layout>