...
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="10dp"
                app:expandedTitleMarginStart="10dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="@drawable/recipe_item_title_bg"
                    android:scaleType="centerCrop"
                    android:transitionName="sharedImage"
                    app:imageUrl="@{viewModel.recipeImageUrl}"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:transitionName="sharedText"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@{viewModel.recipeTitle}" />
...

                        <TextView
                            style="@style/BaseTextViewStyle.RecipeLabelStyle"
                            android:text="@string/label_health_labels" />

                        <TextView
                            android:id="@+id/tv_health_labels"
                            style="@style/BaseTextViewStyle"
                            android:text="@{viewModel.recipeHealthLabels}"
                            android:textSize="16sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
...
