...
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_favorite_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_empty_list_view"
            style="@style/BaseTextViewStyle.EmptyListView"
...
